<resources>
    <string name="app_name">UnitConverter</string>
    <string name="input">Input</string>
    <string name="hint">Your Input Goes Here</string>
    <string name="selector">type of conversion</string>
    <string name="convert">Convert</string>
    <string name="answer">Answer</string>
    <string-array name="choices">
        <item>Kilometers to Miles</item>
        <item>Centimeters to Inches</item>
        <item>Inches to Feet</item>
        <item>Years to Hours</item>
        <item>Days to Seconds</item>
    </string-array>
</resources>