<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".MainActivity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

    <TextView
        style="@style/HeaderTextStyle"
        android:text="@string/input" />

    <EditText
        android:id="@+id/input_edit_text"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/alegreya"
        android:layout_weight="1"
        android:hint="@string/hint"
        android:inputType="numberDecimal"
        android:textColorHint="@android:color/darker_gray" />

        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/selector" />

        <Spinner
            android:id="@+id/selector"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginBottom="16dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal"
            android:text ="@string/convert"
            android:fontFamily="@font/alegreya_sc_bold_italic"
            android:onClick="convertUnit"/>

        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/answer" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:textAppearance="?android:textAppearanceLarge"
            android:id = "@+id/answer_text_view"
            android:gravity="center"
            android:fontFamily="@font/alegreya"
            android:text =""/>

    </LinearLayout>
